RESOLVED FIXED161317
API test URLParserTest.ParserFailures failing ASSERT_NOT_REACHED
https://bugs.webkit.org/show_bug.cgi?id=161317
Summary API test URLParserTest.ParserFailures failing ASSERT_NOT_REACHED
Ryan Haddad
Reported 2016-08-29 11:01:44 PDT
UNEXPECTEDLY EXITED URLParserTest.ParserFailures SHOULD NEVER BE REACHED /Volumes/Data/slave/fuji-debug-archive/build/OpenSource/Source/WebCore/platform/URLParser.cpp(431) : WebCore::URL WebCore::URLParser::parse(const WTF::String &, const WebCore::URL &, const WebCore::TextEncoding &) 1 0x10de5a4fd WTFCrash 2 0x11ae96a85 WebCore::URLParser::parse(WTF::String const&, WebCore::URL const&, WebCore::TextEncoding const&) 3 0x10c85208e TestWebKitAPI::shouldFail(WTF::String const&) 4 0x10c852018 TestWebKitAPI::URLParserTest_ParserFailures_Test::TestBody() 5 0x10c8b933a testing::Test::Run() 6 0x10c8ba16d testing::internal::TestInfoImpl::Run() 7 0x10c8bb16d testing::TestCase::Run() 8 0x10c8c18ab testing::internal::UnitTestImpl::RunAllTests() 9 0x10c8c1529 testing::UnitTest::Run() 10 0x10c83bcdc TestWebKitAPI::TestsController::run(int, char**) 11 0x10c8adcb4 main 12 0x7fff9702a255 start https://build.webkit.org/builders/Apple%20El%20Capitan%20Debug%20WK2%20(Tests)/builds/7826
Attachments
Patch (2.21 KB, patch)
2016-08-29 11:26 PDT, Alex Christensen
beidson: review+
Alex Christensen
Comment 1 2016-08-29 11:26:24 PDT
Alex Christensen
Comment 2 2016-08-29 11:29:11 PDT
Note You need to log in before you can comment on or make changes to this bug.