API test URLParserTest.ParserFailures failing ASSERT_NOT_REACHED https://bugs.webkit.org/show_bug.cgi?id=161317

Reviewed by Brady Eidson.

Source/WebCore:

Added an API test.

* platform/URLParser.cpp:
(WebCore::URLParser::parse):
Turns out, this state can be reached.

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):



Canonical link: https://commits.webkit.org/179502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205128 268f45cc-cd09-0410-ab3c-d52691b4dbfc